...
      return;
    }
    setPage(page + 1);
    fetchBloodPressures();
  };
  return (
    <View style={styles.container} testID="bloodPressureScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={bloodPressureList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
